@@ -1,4 +1,5 @@
 0.8.0 (currently working on)
+- [#2474] Change: Use function FrontEndUser::hasGroupMembership
 - [#1571] Feature: Add a description to the content wizard
 - [#2787] Change: Registration heading should have two markers for title and date
 - [#2786] Fix: Subpart REGISTRATION_BOTTOM is not rendered if there's only an error message
